Update membship button style

--- a/public/landing-assets/css/landing.css
+++ b/public/landing-assets/css/landing.css
@@ -124,7 +124,7 @@ header {
 	height: 38px;
 	line-height: 38px;
 	/* background: #c558c7; */
-    background: #1C75BC;
+    background: #69b783;
 	border-radius: 50px;
 	-webkit-border-radius: 50px;
 	margin-right: 29px;
