--- a/public/style.css
+++ b/public/style.css
@@ -128,7 +128,7 @@ header {
 	text-transform: uppercase;
 	height: 38px;
 	line-height: 38px;
-	background: #1C75BC;
+	background: #69b783;
 	border-radius: 50px;
 	-webkit-border-radius: 50px;
 	margin-right: 29px;
