Update Button Color of frontend

--- a/public/style.css
+++ b/public/style.css
@@ -1412,7 +1412,7 @@ header {
 	font-size: 19px;
 	padding: 0 29px;
 	border: 0;
-	background: #1C75BC;
+	background: #69b783;
 	border-radius: 50px;
 }
 
